[package]
name = "strand_specifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "0.45.0"}
clap = { version = "4.5.16", features = ["derive"] }

[lib]
name = "strand_specifier_lib"
path = "src/lib.rs"

[[bin]]
name = "strand_specifier"
path = "src/bin/main.rs"